Updated Reps for Warmups on detail template, and read more link on search template

--- a/workouts/templates/workouts/search.html
+++ b/workouts/templates/workouts/search.html
@@ -45,7 +45,7 @@
                        <!-- Text -->
                        <p class="card-title text-muted font-small mt-2 mb-2">{{ workout.description|safe|slice:":150" }}...</p>
                        <div class="row justify-content-center">
-                            <a type="button" href="{{ workout.get_url }}">Read More</a>
+                            <a type="button" class="btn btn-link" href="{{ workout.get_url }}">Read More</a>
                        </div>
                     </div>
                  </div>
