--- a/workouts/templates/workouts/detail.html
+++ b/workouts/templates/workouts/detail.html
@@ -15,7 +15,7 @@
             <hr>
 
             {% if target == "Warmups" %}
-                <h4 class="text-center">Perform For {{ workout.rep_range }}</h4>
+                <h4 class="text-center">{{ workout.rep_range }}</h4>
             {% else %}
                 <div class="row">
                     <div class="col">
