Updated conditional display of workout duration for warmups

--- a/workouts/templates/workouts/detail.html
+++ b/workouts/templates/workouts/detail.html
@@ -15,7 +15,16 @@
             <hr>
 
             {% if target == "Warmups" %}
-                <h4 class="text-center">{{ workout.rep_range }}</h4>
+                <div class="row">
+                    <div class="col">
+                        <h4 class="textstyle text-center">Duration</h4>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <h5 class="textstyle text-center">{{ workout.rep_range }}</h5>
+                    </div>
+                </div>
             {% else %}
                 <div class="row">
                     <div class="col">
