another update to detail template for warmups

--- a/workouts/templates/workouts/detail.html
+++ b/workouts/templates/workouts/detail.html
@@ -19,10 +19,8 @@
                     <div class="col">
                         <h4 class="textstyle text-center">Duration</h4>
                     </div>
-                </div>
-                <div class="row">
                     <div class="col">
-                        <h5 class="textstyle text-center">{{ workout.rep_range }}</h5>
+                        <h5 class="text-center">{{ workout.rep_range }}</h5>
                     </div>
                 </div>
             {% else %}
