setting DEBUG to false manually,  updated detail and overview templates with typo changes

--- a/workouts/templates/workouts/detail.html
+++ b/workouts/templates/workouts/detail.html
@@ -99,7 +99,7 @@
                     <div class="card-body">
                        <h5 class="text-center"><a href="/rotator-cuff-warmups">Rotator Cuff Warmups</a></h5>
                        <p class="card-title text-muted font-small mt-3 mb-2">
-                        The rotator cuff is one of the most commonly injured body part, but by properly warming it up, we can avoid pain and
+                        The rotator cuff is one of the most commonly injured body parts, but by properly warming it up, we can avoid pain and
                         strengthen those muscles.
                        </p>
                     </div>
