--- a/workouts/templates/workouts/overview.html
+++ b/workouts/templates/workouts/overview.html
@@ -60,7 +60,7 @@
                    <h5 class="text-center">Dumbbells</h5>
                    <p class="card-title text-muted font-small mt-3 mb-2">
                     Dumbells should be a staple in any workout routine. They are easily accessible and incredibly
-                    multi-functional, from a <a href="/incline-dumbbell-press">traditional dumbbell press</a>, to bulgarian split squats.
+                    multi-functional, from a <a href="/flat-dumbbell-bench-press">traditional dumbbell press</a>, to bulgarian split squats.
                     </p>
                 </div>
              </div>
