Updated settings and overview template to retrieve image

--- a/workouts/templates/workouts/overview.html
+++ b/workouts/templates/workouts/overview.html
@@ -19,7 +19,7 @@
         <h5 class="">Find the workouts you love and <strong>CHASE THAT PUMP!</strong></h5>
 
         <div class="media">
-            <img src="{{ "/media/arnold.jpg" }}" class="rounded mx-auto d-block" style="padding-bottom: 15px; height: 100%; width: 100%; object-fit: cover;" alt="home">
+            <img src="{% static 'workouts/static/arnold.jpg' %}" class="rounded mx-auto d-block" style="padding-bottom: 15px; height: 100%; width: 100%; object-fit: cover;" alt="home">
         </div>
     </div>
 
