added AWS link to arnold image, testing

--- a/workouts/templates/workouts/overview.html
+++ b/workouts/templates/workouts/overview.html
@@ -19,7 +19,7 @@
         <h5 class="">Find the workouts you love and <strong>CHASE THAT PUMP!</strong></h5>
 
         <div class="media">
-            <img src="{% static 'workouts/static/arnold.jpg' %}" class="rounded mx-auto d-block" style="padding-bottom: 15px; height: 100%; width: 100%; object-fit: cover;" alt="home">
+            <img src="https://gym-workouts-files.s3.amazonaws.com/arnold.jpg" class="rounded mx-auto d-block" style="padding-bottom: 15px; height: 100%; width: 100%; object-fit: cover;" alt="home">
         </div>
     </div>
 
