fixed images for dumbbells, cables, and barbell in overview template

--- a/workouts/templates/workouts/overview.html
+++ b/workouts/templates/workouts/overview.html
@@ -49,13 +49,13 @@
     <hr>
 
     <div class="text-center">
-        <h3 class="list-heading">GET FAMILIAR</h3>
+        <h3 class="list-heading">GET WORKING</h3>
     </div>
 
     <div class="row" style="padding-bottom: 15px;">
         <div class="col-lg-4 col-md-12 mb-lg-0 mb-4">
              <div class="card hoverable">
-                <img class="card-img-top" src="/media/dumbells.jpg" alt="dumbbells image">
+                <img class="card-img-top" src="https://gym-workouts-files.s3.amazonaws.com/dumbells.jpg" alt="dumbbells image">
                 <div class="card-body">
                    <h5 class="text-center">Dumbbells</h5>
                    <p class="card-title text-muted font-small mt-3 mb-2">
@@ -67,7 +67,7 @@
           </div>
           <div class="col-lg-4 col-md-12 mb-lg-0 mb-4">
              <div class="card hoverable">
-                <img class="card-img-top" src="/media/cables.jpg" alt="cable machine">
+                <img class="card-img-top" src="https://gym-workouts-files.s3.amazonaws.com/cables.jpg" alt="cable machine">
                 <div class="card-body">
                    <h5 class="text-center">Cables</h5>
                    <p class="card-title text-muted font-small mt-3 mb-2">Cable machines are excellent for accessory
@@ -78,7 +78,7 @@
           </div>
           <div class="col-lg-4 col-md-12 mb-lg-0 mb-4">
              <div class="card hoverable">
-                <img class="card-img-top" src="/media/cbum.jpg" alt="barbells">
+                <img class="card-img-top" src="https://gym-workouts-files.s3.amazonaws.com/cbum.jpg" alt="barbells">
                 <div class="card-body">
                    <h5 class="text-center">Barbells</h5>
                    <p class="card-title text-muted font-small mt-3 mb-2">Barbells are often used for compound lifts as they
