adding google analytics functionality, tags in base template and app to installed apps in Settings

--- a/workouts/templates/workouts/base.html
+++ b/workouts/templates/workouts/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load social_share %}
+{% load analytics %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -84,6 +85,9 @@
 
      </div>
    </footer>
+
+   {% analytics "G-QH62G904BR" %}
+
 </body>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
