undo google analytics, linking favicons to AWS bucket

--- a/workouts/templates/workouts/base.html
+++ b/workouts/templates/workouts/base.html
@@ -1,6 +1,5 @@
 {% load static %}
 {% load social_share %}
-{% load analytics %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,8 +29,8 @@
         <title>Chase that Pump</title>
     {% endif %}
 
-    <link rel="icon" type="image/png" href="/media/favicons/favicon-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="/media/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="https://gym-workouts-files.s3.amazonaws.com/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="https://gym-workouts-files.s3.amazonaws.com/favicons/favicon-32x32.png" sizes="32x32">
 
 </head>
 
@@ -85,9 +84,6 @@
 
      </div>
    </footer>
-
-   {% analytics "G-QH62G904BR" %}
-
 </body>
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
