--- a/workouts/templates/workouts/overview.html
+++ b/workouts/templates/workouts/overview.html
@@ -83,7 +83,7 @@
                    <h5 class="text-center">Barbells</h5>
                    <p class="card-title text-muted font-small mt-3 mb-2">Barbells are often used for compound lifts as they
                    are easier to progressively overload with weight, in addition to greater stability than dumbbells. Common exercises
-                   performed with barbells include the <a href="/barbell-bench-press">bench press</a>,
+                   performed with barbells include the <a href="/flat-barbell-bench-press">bench press</a>,
                     deadlift, and <a href="/overhead-military-press">overhead press</a>.</p>
                 </div>
              </div>
