resize all images for workout search query

--- a/workouts/templates/workouts/search.html
+++ b/workouts/templates/workouts/search.html
@@ -34,7 +34,7 @@
                  <!-- Card -->
                  <div class="card hoverable">
                     <!-- Card image -->
-                    <img class="card-img-top" src="{{ workout.image.url }}" alt="">
+                    <img class="card-img-top" src="{{ workout.image.url }}" alt="" style="height: 200px;">
                     <!-- Card content -->
                     <div class="card-body">
                        <!-- Title -->
