Name change to contact templates. Updated text on main templates.

--- a/contact/templates/contact/success.html
+++ b/contact/templates/contact/success.html
@@ -4,7 +4,7 @@
 
 <div class="container">
     <h1 class="text-center">Your suggestions are noted! We'll get right to work
-    to make Chase the Pump even better for you!</h1>
+    to make Chase that Pump even better for you!</h1>
 </div>
 
 {% endblock %}
