--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -4,7 +4,7 @@
 
 <div class="container" style="padding-bottom: 15px;">
 
-   <h3 class="text-center"><strong>Thanks for visitng Chase the Pump!</strong></h3>
+   <h3 class="text-center"><strong>Thanks for visitng Chase that Pump!</strong></h3>
    <hr>
    <h4 class="text-center">Please leave any new workout ideas or suggestions moving forward.</h4>
    <p class="text-center"> We hope to be by your side through your workout transformation!</p>
