--- a/workouts/templates/workouts/overview.html
+++ b/workouts/templates/workouts/overview.html
@@ -49,7 +49,7 @@
     <hr>
 
     <div class="text-center">
-        <h3 class="list-heading">GET WORKING</h3>
+        <h3 class="list-heading">GET STARTED IN THE GYM</h3>
     </div>
 
     <div class="row" style="padding-bottom: 15px;">
